--- a/css/layout.css
+++ b/css/layout.css
@@ -34,7 +34,7 @@ header {
    min-height: 500px;
    width: 100%;
    opacity: 0.9;
-   background: url(../images/header-background1.jpg) no-repeat top center;
+   background: url(../images/header-background.jpg) no-repeat top center;
    background-size: cover !important;
 	-webkit-background-size: cover !important;
    text-align: center;
@@ -70,26 +70,37 @@ header .banner {
    text-align: center;
 }
 
-header .banner-text { width: 100%; }
-header .banner-text h1 {
+
+header .agile_banner_info{ width: 100%; }
+
+/*header.agile_banner_info h2 {
+    font-size: 2.5em;
+    letter-spacing: 2px;
+    color: #ecb731;
+	text-shadow: 1px 1px 2px #000;
+}
+header.agile_banner_info h2 span{
+    color: #171717;
+}*/
+/*header .agile_banner_info h2 {
    font: 90px/1.1em 'opensans-bold', sans-serif;
    color: #009900;
    letter-spacing: -2px;
    margin: 0 auto 18px auto;
-   text-shadow: 0px 1px 3px rgba(0, 0, 0, .8);
+   text-shadow: 0px 1px 3px rgba(0, 0, 0, .8);*/
 }
-header .banner-text h3 {
+header .agile_banner_info h3 {
    font: 18px/1.9em 'librebaskerville-regular', serif;
    color: #009900;
    margin: 0 auto;
    width: 70%;
    text-shadow: 0px 1px 2px rgba(0, 0, 0, .5);
 }
-header .banner-text h3 span,
-header .banner-text h3 a {
+header .agile_banner_info h3 span,
+header .agile_banner_info h3 a {
    color: #009900;
 }
-header .banner-text hr {
+header .agile_banner_info hr {
    width: 60%;
    margin: 18px auto 24px auto;
    border-color: #009900;
@@ -841,15 +852,15 @@ call-to-action .button {
    margin-bottom: 6px;
 }
 #contact h1 span { display: none; }
-#contact h1:before {
-   font-family: 'FontAwesome';
-   content: "\f0e0";
-	padding-right: 10px;
-	font-size: 72px;
-   line-height: 72px;
-   text-align: left;
-   float: left;
-   color:#009900;
+#contact .mobile:after {
+  font-family: 'FontAwesome';
+  content: "\f0e0";
+  padding-right: 10px;
+  font-size: 72px;
+  line-height: 72px;
+  text-align: left;
+  float: left;
+  color:#009900;
 }
 
 #contact h4 {
@@ -1020,3 +1031,33 @@ footer .social-links li:first-child { margin-left: 0; }
  	border-radius: 100%;
 }
 #go-top a:hover { background-color: #009900; }
+
+/*-- //banner --*/
+
+#typed {
+    font-size: 2em;
+    font-weight:bolder;
+    color: #fff;
+    text-transform: capitalize;
+    line-height: 1.5em;
+    letter-spacing: 7px;
+    font-weight: 300;
+    text-shadow: 1px 1px 2px #000;
+    margin: 0.5em 0 0.5em;
+    display: inline-block;
+}
+#typed i {
+    font-style: normal;
+    color: #ecb731;
+}
+.typed-cursor {
+    opacity: 1;
+    font-weight: 300;
+    -webkit-animation: blink 0.7s infinite;
+    -moz-animation: blink 0.7s infinite;
+    -ms-animation: blink 0.7s infinite;
+    -o-animation: blink 0.7s infinite;
+    animation: blink 0.7s infinite;
+    color: #fff;
+    font-size: 2.5em;
+}
